force-app/main/default/objects/PNC_Recon_Batch__c/PNC_Recon_Batch__c.object-meta.xml
<CustomObject>
    <label>PNC Recon Batch</label>
    <nameField>
        <label>PNC Recon Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PNC Recon Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>