force-app/main/default/objects/PNC_Recon_Batch__c/fields/OK__c.field-meta.xml
<CustomField>
    <fullName>OK__c</fullName>
    <label>OK</label>
    <summaryFilterItems>
        <field>PNC_Recon_Detail__c.Status__c</field>
        <operation>equals</operation>
        <value>OK</value>
    </summaryFilterItems>
    <summaryForeignKey>PNC_Recon_Detail__c.PNC_Recon_Batch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>