force-app/main/default/objects/PNC_Recon_Batch__c/fields/Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>Records_Processed__c</fullName>
    <label>Records Processed</label>
    <summaryForeignKey>PNC_Recon_Detail__c.PNC_Recon_Batch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>