force-app/main/default/objects/PNC_Recon_Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Records_Processed__c</columns>
    <columns>OK__c</columns>
    <columns>Failures__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>